--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "cloudinary": "^2.2.0",
+    "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "framer-motion": "^11.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
